service/wiki/02.wiki-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  replicas: 4
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
        - image: nginx:1.10.2
          name: wiki
          ports:
            - containerPort: 80
              name: wiki
          volumeMounts:
            - name: wiki-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wiki-persistent-storage
          persistentVolumeClaim:
            claimName: wiki-pvc
