service/wiki/03.wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wiki
  name: wiki
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wiki
