service/wiki/04.wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: wiki.k8s.com
    http:
      paths:
      - backend:
          service:
            name: wiki
            port:
              number: 80
        path: /
        pathType: Prefix
